added code files

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  @apply bg-black text-white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  @apply bg-primary-red text-white hover:bg-black hover:text-primary-red;
+}
+
+a {
+  @apply text-primary-red hover:text-white;
+}
+.modal-background {
+  @apply fixed inset-0 flex items-center justify-center bg-opacity-50;
 }
